De-/Serialize site as association instead of foreign key value
This will allow importing Site objects as part of Geolocat objects.
To enable testing associations in the service tests, make some
amendments, notably recursive verification of returned objects.
In OrtszuordnungTest, also perform some general code improvements.